<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="stylish_search_text_field_test_tag">StylishSearchTextField</string>
</resources>
